Fixed so that integration tests now can be run