@@ -14,6 +14,9 @@
   <properties>
     <tomcat.host>localhost</tomcat.host>
     <tomcat.port>8080</tomcat.port>
+    <maven.failsafe.version></maven.failsafe.version>
+    <failsafe.argLine />
+    <jacoco.agent.arg />
   </properties>
 
   <developers>
@@ -107,113 +110,210 @@
 
   <!-- Here we realize the connection with the Alfresco selected platform (e.g.version and edition) -->
   <dependencyManagement>
-    
+
   </dependencyManagement>
 
   <!-- Following dependencies are needed for compiling Java code in src/main/java; <scope>provided</scope> is inherited for each of the following; for more info, please refer to alfresco-platform-distribution POM -->
   <dependencies>
-    
+
   </dependencies>
 
   <build>
-
-    
+    <plugins>
+      <!-- ################################################################ -->
+      <!-- Override surefire configuration to allow for integration testing -->
+      <!-- ################################################################ -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <excludes>
+            <exclude>**/*IntegrationTest.java</exclude>
+            <exclude>**/*FunctionalTest.java</exclude>
+          </excludes>
+          <argLine>${jacoco.agent.arg} ${failsafe.argLine} -Xms256m -Xmx2G -XX:PermSize=512m</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 
   <profiles>
+    <profile>
+      <!-- ############################################################################ -->
+      <!-- Here we define our integration test features                                 -->
+      <!-- ############################################################################ -->
+      <id>it</id>
+      <properties>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+
+              <configuration>
+                <skipTests>true</skipTests>
+                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+              </configuration>
+              <executions>
+                <execution>
+                  <id>integration-test</id>
+                  <phase>test</phase>
+                  <goals>
+                    <goal>integration-test</goal>
+                    <goal>verify</goal>
+                  </goals>
+                  <configuration>
+                    <argLine>${jacoco-it.agent.arg} ${failsafe.argLine} -Xms256m -Xmx2G -XX:PermSize=512m</argLine>
+                    <excludes>
+                      <exclude>**/*FunctionalTest.java</exclude>
+                    </excludes>
+                    <includes>
+                      <include>**/*IntegrationTest.java</include>
+                    </includes>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+
+
+        <plugins>
+          <!-- ###################################################################### -->
+          <!-- Set default properties so that we don't have to multiply plugin config -->
+          <!-- ###################################################################### -->
+          <plugin>
+            <groupId>org.redpill-linpro.alfresco</groupId>
+            <artifactId>properties-maven-plugin</artifactId>
+            <version>1.0.0</version>
+            <executions>
+              <execution>
+                <id>set-default-properties</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>set-properties</goal>
+                </goals>
+                <configuration>
+                  <properties>
+                    <jacoco-it.agent.arg />
+                  </properties>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>integration-test</id>
+                <configuration>
+                  <skipTests>false</skipTests>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+
+    </profile>
 
     <profile>
-          <!-- ############################################### -->
-    <!-- profile to copy all code to the exploded tomcat -->
-    <!-- ############################################### -->
+      <!-- ############################################### -->
+      <!-- profile to copy all code to the exploded tomcat -->
+      <!-- ############################################### -->
       <id>dev</id>
       <properties>
         <alfresco.webapp.name>alfresco</alfresco.webapp.name>
       </properties>
       <build>
         <pluginManagement>
-      <plugins>
-        <!-- ####################################### -->
-        <!-- also clean out local jar file in tomcat -->
-        <!-- ####################################### -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>2.5</version>
-          <configuration>
-            <filesets>
-              <fileset>
-                <directory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/classes/alfresco/module/${project.artifactId}</directory>
-              </fileset>
-              <fileset>
-                <directory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/lib</directory>
-                <includes>
-                  <include>${project.build.finalName}.jar</include>
-                </includes>
-              </fileset>
-            </filesets>
-          </configuration>
-        </plugin>
-
-        <!-- ######################################### -->
-        <!-- Copy dependency jar files to local tomcat -->
-        <!-- ######################################### -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>hot-copy-dependencies</id>
-              <goals>
-                <goal>copy-dependencies</goal>
-              </goals>
+          <plugins>
+            <!-- ####################################### -->
+            <!-- also clean out local jar file in tomcat -->
+            <!-- ####################################### -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-clean-plugin</artifactId>
+              <version>2.5</version>
               <configuration>
-                <outputDirectory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/lib</outputDirectory>
-                <overWriteReleases>false</overWriteReleases>
-                <overWriteSnapshots>false</overWriteSnapshots>
-                <overWriteIfNewer>true</overWriteIfNewer>
-                <includeScope>runtime</includeScope>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>hot-copy-resources</id>
-              <goals>
-                <goal>copy-resources</goal>
-              </goals>
-              <configuration>
-                <outputDirectory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/lib</outputDirectory>
-                <resources>
-                  <resource>
-                    <directory>${project.build.directory}/</directory>
+                <filesets>
+                  <fileset>
+                    <directory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/classes/alfresco/module/${project.artifactId}</directory>
+                  </fileset>
+                  <fileset>
+                    <directory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/lib</directory>
                     <includes>
                       <include>${project.build.finalName}.jar</include>
                     </includes>
-                  </resource>
-                </resources>
+                  </fileset>
+                </filesets>
               </configuration>
-            </execution>
+            </plugin>
 
-          </executions>
+            <!-- ######################################### -->
+            <!-- Copy dependency jar files to local tomcat -->
+            <!-- ######################################### -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-dependency-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>hot-copy-dependencies</id>
+                  <goals>
+                    <goal>copy-dependencies</goal>
+                  </goals>
+                  <configuration>
+                    <outputDirectory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/lib</outputDirectory>
+                    <overWriteReleases>false</overWriteReleases>
+                    <overWriteSnapshots>false</overWriteSnapshots>
+                    <overWriteIfNewer>true</overWriteIfNewer>
+                    <includeScope>runtime</includeScope>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
 
-          <configuration>
-            <overwrite>true</overwrite>
-          </configuration>
-        </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-resources-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>hot-copy-resources</id>
+                  <goals>
+                    <goal>copy-resources</goal>
+                  </goals>
+                  <configuration>
+                    <outputDirectory>${tomcat.home}/webapps/${alfresco.client.war}/WEB-INF/lib</outputDirectory>
+                    <resources>
+                      <resource>
+                        <directory>${project.build.directory}/</directory>
+                        <includes>
+                          <include>${project.build.finalName}.jar</include>
+                        </includes>
+                      </resource>
+                    </resources>
+                  </configuration>
+                </execution>
 
-        <plugin>
-          <groupId>org.redpill-linpro.alfresco</groupId>
-          <artifactId>refreshwebscripts-maven-plugin</artifactId>
-          <version>1.0.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+              </executions>
+
+              <configuration>
+                <overwrite>true</overwrite>
+              </configuration>
+            </plugin>
+
+            <plugin>
+              <groupId>org.redpill-linpro.alfresco</groupId>
+              <artifactId>refreshwebscripts-maven-plugin</artifactId>
+              <version>1.0.2</version>
+            </plugin>
+          </plugins>
+        </pluginManagement>
 
         <plugins>
           <plugin>
